@@ -5,6 +5,7 @@
 from cgi import escape
 
 from Products.Archetypes import atapi
+from Products.CMFPlone.utils import safe_unicode
 from Products.PortalTransforms.transforms.safe_html import scrubHTML
 from Products.validation.interfaces.IValidator import IValidator
 from recensio.contenttypes import contenttypesMessageFactory as _
@@ -16,8 +17,7 @@ from recensio.contenttypes.content.review import get_formatted_names
 from recensio.contenttypes.content.schemata import ExhibitionSchema
 from recensio.contenttypes.content.schemata import LicenceSchema
 from recensio.contenttypes.content.schemata import PageStartEndInPDFSchema
-from recensio.contenttypes.content.schemata import (
-    PageStartEndOfReviewInJournalSchema)
+from recensio.contenttypes.content.schemata import PageStartEndOfReviewInJournalSchema
 from recensio.contenttypes.content.schemata import ReviewSchema
 from recensio.contenttypes.content.schemata import finalize_recensio_schema
 from recensio.contenttypes.interfaces import IReviewExhibition
@@ -33,7 +33,8 @@ ReviewExhibitionSchema = (
     + LicenceSchema.copy()
 )
 
-ReviewExhibitionSchema["title"].storage = atapi.AnnotationStorage()
+ReviewExhibitionSchema["title"].required = False
+ReviewExhibitionSchema["title"].widget.modes = ("view",)
 ReviewExhibitionSchema["doc"].widget.condition = "python:False"
 ReviewExhibitionSchema["languageReviewedText"].widget.condition = "python:False"
 ReviewExhibitionSchema.changeSchemataForField(
@@ -52,7 +53,6 @@ class ReviewExhibition(BaseReview):
     meta_type = "ReviewExhibition"
     schema = ReviewExhibitionSchema
 
-    title = atapi.ATFieldProperty("title")
     description = atapi.ATFieldProperty("description")
 
     # Base
@@ -76,8 +76,13 @@ class ReviewExhibition(BaseReview):
     ddcTime = atapi.ATFieldProperty("ddcTime")
 
     # Exhibition
-    exhibitor = atapi.ATFieldProperty("exhibitor")
+    exhibiting_institution = atapi.ATFieldProperty("exhibiting_institution")
     dates = atapi.ATFieldProperty("dates")
+    years = atapi.ATFieldProperty("years")
+    exhibiting_organisation = atapi.ATFieldProperty("exhibiting_organisation")
+    curators = atapi.ATFieldProperty("curators")
+    isPermanentExhibition = atapi.ATFieldProperty("isPermanentExhibition")
+    titleProxy = atapi.ATFieldProperty("titleProxy")
     subtitle = atapi.ATFieldProperty("subtitle")
     url_exhibition = atapi.ATFieldProperty("url_exhibition")
     doi_exhibition = atapi.ATFieldProperty("doi_exhibition")
@@ -86,14 +91,20 @@ class ReviewExhibition(BaseReview):
     pageStart = atapi.ATFieldProperty("pageStart")
     pageEnd = atapi.ATFieldProperty("pageEnd")
 
+    # PageStartEndOfReviewInJournal
+    pageStartOfReviewInJournal = atapi.ATFieldProperty("pageStartOfReviewInJournal")
+    pageEndOfReviewInJournal = atapi.ATFieldProperty("pageEndOfReviewInJournal")
+
     # Reorder the fields as required for the edit view
     ordered_fields = [
         # Exhibition schemata
-        "exhibitor",
-        "exhibitor_gnd",
-        "curators",
+        "exhibiting_institution",
         "dates",
-        "title",
+        "years",
+        "exhibiting_organisation",
+        "curators",
+        "isPermanentExhibition",
+        "titleProxy",
         "subtitle",
         "url_exhibition",
         "doi_exhibition",
@@ -125,17 +136,55 @@ class ReviewExhibition(BaseReview):
     for i, field in enumerate(ordered_fields):
         schema.moveField(field, pos=i)
 
+    @property
+    def title(self):
+        return self.titleProxy or u"Ausstellung"
+
+    @title.setter
+    def title(self, value):
+        self.titleProxy = value
+
+    @property
+    def exhibitor(self):
+        return (
+            u" / ".join(
+                [
+                    safe_unicode(institution["name"]).strip()
+                    for institution in self.exhibiting_institution
+                    if institution["name"]
+                ]
+            )
+            or u" / ".join(
+                [
+                    safe_unicode(organisation["name"].decode("utf-8")).strip()
+                    for organisation in self.exhibiting_organisation
+                    if organisation["name"]
+                ]
+            )
+            or get_formatted_names(
+                u" / ",
+                u" ",
+                [
+                    person
+                    for person in self.curators
+                    if person["firstname"] or person["lastname"]
+                ],
+            )
+        )
+
     # An ordered list of fields used for the metadata area of the view
 
     metadata_fields = [
         "metadata_review_type_code",
+        "get_journal_title",
         "metadata_start_end_pages",
         "metadata_review_author",
         "languageReview",
         "languageReviewedText",
-        "exhibitor",
+        "exhibiting_institution",
+        "exhibiting_organisation",
         "curators",
-        "title",
+        "titleProxy",
         "subtitle",
         "dates",
         "url_exhibition",
@@ -189,13 +238,30 @@ class ReviewExhibitionNoMagic(BaseReviewNoMagic):
         >>> from mock import Mock
         >>> at_mock = Mock()
         >>> at_mock.customCitation = ''
-        >>> at_mock.formatted_authors_editorial = "Patrick Gerken / Alexander Pilz"
-        >>> at_mock.punctuated_title_and_subtitle = "Plone 4.0. Das Benutzerhandbuch"
+        >>> at_mock.punctuated_title_and_subtitle = u"Algol. Eine Retrospektive"
         >>> at_mock.reviewAuthors = [{'firstname' : 'Cillian', 'lastname'  : 'de Roiste'}]
+        >>> at_mock.dates = [{"place": "M\xc3\xbcnchen", "runtime": ""}]
+        >>> at_mock.exhibiting_institution = [{"name": "Museum f\xc3\xbcr Software", "gnd": ""}]
+        >>> at_mock.exhibiting_organisation = [{"name": "Verein f\xc3\xbcr Softwareerhaltung", "gnd": ""}]
+        >>> at_mock.curators = [{'firstname': 'Alexander', 'lastname': 'Pilz'}]
+        >>> at_mock.isPermanentExhibition = False
         >>> review = ReviewExhibitionNoMagic(at_mock)
         >>> review.directTranslate = lambda a: a
         >>> review.getDecoratedTitle()
-        u'Patrick Gerken / Alexander Pilz: Plone 4.0. Das Benutzerhandbuch (reviewed_by)'
+        u'Museum f\\xfcr Software: Algol. Eine Retrospektive, M\\xfcnchen (exhibition_reviewed_by)'
+        >>> at_mock.punctuated_title_and_subtitle = u""
+        >>> at_mock.isPermanentExhibition = True
+        >>> review.getDecoratedTitle()
+        u'Museum f\\xfcr Software: Dauerausstellung, M\\xfcnchen (exhibition_reviewed_by)'
+        >>> at_mock.exhibiting_institution = [{"name": "", "gnd": ""}]
+        >>> review.getDecoratedTitle()
+        u'Verein f\\xfcr Softwareerhaltung: Dauerausstellung, M\\xfcnchen (exhibition_reviewed_by)'
+        >>> at_mock.exhibiting_organisation = [{"name": "", "gnd": ""}]
+        >>> review.getDecoratedTitle()
+        u'Alexander Pilz: Dauerausstellung, M\\xfcnchen (exhibition_reviewed_by)'
+        >>> at_mock.curators = [{'firstname': '', 'lastname': ''}]
+        >>> review.getDecoratedTitle()
+        u'Dauerausstellung, M\\xfcnchen (exhibition_reviewed_by)'
 
         Original Spec:
         [Werkautor Vorname] [Werkautor Nachname]: [Werktitel]. [Werk-Untertitel] (reviewed by [Rezensent Vorname] [Rezensent Nachname])
@@ -211,26 +277,33 @@ class ReviewExhibitionNoMagic(BaseReviewNoMagic):
             u" / ", " ", self.reviewAuthors, lastname_first=lastname_first
         )
         if rezensent_string:
-            rezensent_string = "(%s)" % real_self.directTranslate(
+            rezensent_string = u"(%s)" % real_self.directTranslate(
                 Message(
                     u"exhibition_reviewed_by",
                     "recensio",
                     mapping={u"review_authors": rezensent_string},
                 )
             )
-
-        dates_formatter = getFormatter(", ")
-        dates_string = " / ".join(
-            [dates_formatter(date["place"], date["runtime"],) for date in self.dates]
+        dates_formatter = getFormatter(u", ")
+        dates_string = u" / ".join(
+            [
+                dates_formatter(
+                    date["place"].decode("utf-8"), date["runtime"].decode("utf-8"),
+                )
+                for date in self.dates
+            ]
         )
 
-        full_citation = getFormatter(u": ", u", ", u" ")
-        return full_citation(
-            self.exhibitor,
+        permanent_exhib_string = real_self.directTranslate(
+            Message(u"Dauerausstellung", "recensio")
+        )
+        title_string = getFormatter(u". ")(
             self.punctuated_title_and_subtitle,
-            dates_string,
-            rezensent_string,
+            permanent_exhib_string if self.isPermanentExhibition else u"",
         )
+
+        full_title = getFormatter(u": ", u", ", u" ")
+        return full_title(self.exhibitor, title_string, dates_string, rezensent_string,)
 
     def get_citation_string(real_self):
         """
@@ -240,20 +313,40 @@ class ReviewExhibitionNoMagic(BaseReviewNoMagic):
         >>> at_mock.customCitation = ''
         >>> at_mock.get = lambda x: None
         >>> at_mock.formatted_authors_editorial = u"Gerken\u2665, Patrick\u2665 / Pilz, Alexander"
-        >>> at_mock.punctuated_title_and_subtitle = "Plone 4.0♥? Das Benutzerhandbuch♥"
+        >>> at_mock.punctuated_title_and_subtitle = "Plone 4.0♥? Eine Retrospektive♥"
         >>> at_mock.reviewAuthors = [{'firstname' : 'Cillian♥', 'lastname' : 'de Roiste♥'}]
         >>> at_mock.portal_url = lambda :'http://www.syslab.com'
+        >>> at_mock.get_issue_title = lambda :'Open Source Mag 1♥'
+        >>> at_mock.get_volume_title = lambda :'Open Source Mag Vol 1♥'
+        >>> at_mock.get_publication_title = lambda :'Open Source♥'
         >>> at_mock.UID = lambda :'12345'
         >>> at_mock.canonical_uri = ''
         >>> at_mock.page_start_end_in_print = '11-21'
         >>> at_mock.isDoiRegistrationActive = lambda: False
         >>> at_mock.getDoi = lambda: None
         >>> at_mock.generateDoi = lambda: None
+        >>> at_mock.dates = [{"place": "M\xc3\xbcnchen", "runtime": ""}]
+        >>> at_mock.exhibiting_institution = [{"name": "Museum f\xc3\xbcr Software", "gnd": ""}]
+        >>> at_mock.exhibiting_organisation = [{"name": "Verein f\xc3\xbcr Softwareerhaltung", "gnd": ""}]
+        >>> at_mock.curators = [{'firstname': 'Alexander', 'lastname': 'Pilz'}]
+        >>> at_mock.isPermanentExhibition = False
         >>> review = ReviewExhibitionNoMagic(at_mock)
         >>> review.directTranslate = lambda m: m.default
         >>> review.get_citation_string()
-        u'de Roiste\u2665, Cillian\u2665: review of: Gerken\u2665, Patrick\u2665 / Pilz, Alexander, Plone 4.0\u2665? Das Benutzerhandbuch\u2665, M\\xfcnchen\u2665: SYSLAB.COM GmbH\u2665, 2009\u2665, in: Open Source\u2665, Open Source Mag Vol 1\u2665, Open Source Mag 1\u2665, p. 11-21, <a href="http://syslab.com/r/12345">http://syslab.com/r/12345</a>'
-
+        u'de Roiste\u2665, Cillian\u2665: review of: Museum f\\xfcr Software: Plone 4.0\u2665? Eine Retrospektive\u2665, M\\xfcnchen, in: Open Source\u2665, Open Source Mag Vol 1\u2665, Open Source Mag 1\u2665, p. 11-21, <a href="http://syslab.com/r/12345">http://syslab.com/r/12345</a>'
+        >>> at_mock.punctuated_title_and_subtitle = u""
+        >>> at_mock.isPermanentExhibition = True
+        >>> review.get_citation_string()
+        u'de Roiste\u2665, Cillian\u2665: review of: Museum f\\xfcr Software: Dauerausstellung, M\\xfcnchen, in: Open Source\u2665, Open Source Mag Vol 1\u2665, Open Source Mag 1\u2665, p. 11-21, <a href="http://syslab.com/r/12345">http://syslab.com/r/12345</a>'
+        >>> at_mock.exhibiting_institution = [{"name": "", "gnd": ""}]
+        >>> review.get_citation_string()
+        u'de Roiste\u2665, Cillian\u2665: review of: Verein f\\xfcr Softwareerhaltung: Dauerausstellung, M\\xfcnchen, in: Open Source\u2665, Open Source Mag Vol 1\u2665, Open Source Mag 1\u2665, p. 11-21, <a href="http://syslab.com/r/12345">http://syslab.com/r/12345</a>'
+        >>> at_mock.exhibiting_organisation = [{"name": "", "gnd": ""}]
+        >>> review.get_citation_string()
+        u'de Roiste\u2665, Cillian\u2665: review of: Alexander Pilz: Dauerausstellung, M\\xfcnchen, in: Open Source\u2665, Open Source Mag Vol 1\u2665, Open Source Mag 1\u2665, p. 11-21, <a href="http://syslab.com/r/12345">http://syslab.com/r/12345</a>'
+        >>> at_mock.curators = [{'firstname': '', 'lastname': ''}]
+        >>> review.get_citation_string()
+        u'de Roiste\u2665, Cillian\u2665: review of: Dauerausstellung, M\\xfcnchen, in: Open Source\u2665, Open Source Mag Vol 1\u2665, Open Source Mag 1\u2665, p. 11-21, <a href="http://syslab.com/r/12345">http://syslab.com/r/12345</a>'
 
         Original Spec:
 
@@ -293,9 +386,14 @@ class ReviewExhibitionNoMagic(BaseReviewNoMagic):
         dates_string = " / ".join(
             [dates_formatter(date["place"], date["runtime"],) for date in self.dates]
         )
-        item_string = rev_details_formatter(
-            self.exhibitor, self.punctuated_title_and_subtitle, dates_string,
+        permanent_exhib_string = real_self.directTranslate(
+            Message(u"Dauerausstellung", "recensio", default="Dauerausstellung")
         )
+        title_string = getFormatter(u". ")(
+            self.punctuated_title_and_subtitle,
+            permanent_exhib_string if self.isPermanentExhibition else u"",
+        )
+        item_string = rev_details_formatter(self.exhibitor, title_string, dates_string,)
 
         mag_number_formatter = getFormatter(u", ", u", ")
         mag_number_string = mag_number_formatter(
